--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage" : "https://shaswattejankar.github.io/flashcardgenerator",
   "name": "flashcardgenerator",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
